普通用户编辑页面，模块之间相互拖拽资源

--- a/src/assets/variables/indexEdit.scss
+++ b/src/assets/variables/indexEdit.scss
@@ -13,12 +13,14 @@ $subColor1:#616264;
 //第二辅色
 $subColor2:#409EFF;
 //第三辅色
-$subColor3:#31cb00;
+$subColor3:#466ED8;
 
 //背景色
 $bgColor:#FFFFFF;
 //第一背景辅色
 $bgColor1:#f9f9f9;
+//第二背景辅色
+$bgColor2:#EEEEF5;
 
 /*
 	定义字体
@@ -28,6 +30,7 @@ $fontColor:#b8b8b8;
 $fontColor1:#333333;
 $fontColor2:#666666;
 $fontColor3:#999999;
+$fontColor4:#FFFFFF;
 //字体大小
 $mainFontSize: 16px;
 $title1FontSize:24px;
