--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -102,6 +102,9 @@ table {  border-collapse: collapse;  border-spacing: 0;  }
 	display: -webkit-flex; /* Chrome 21+, Safari 6.1+, iOS Safari 7+, Opera 15/16 */
 	display: -moz-flex; /* Firefox 18+ */
 	display: -ms-flexbox; /* IE 10 */
+	display: -ms-inline-flexbox;
+	/* display: box; */
+	display: flexbox;
 	display: flex; /* Chrome 29+, Firefox 22+, IE 11+, Opera 12.1/17/18, Android 4.4+ */
 }
 .justify-content{justify-content: space-between;}
